--- a/components/Button.module.css
+++ b/components/Button.module.css
@@ -16,8 +16,14 @@
 
 .primary:active {
   background-color: #9c0052;
-  border: 2px solid #f0f05a;
+  border: 3px solid #f0f05a;
   box-shadow: none;
+}
+
+.primary:focus {
+  color: #000b3b;
+  border: 4px solid #8200d1;
+  background-color: #f0f05a;
 }
 
 .primary:disabled {
@@ -46,7 +52,7 @@
 
 .secondary:active {
   color: #000b3b;
-  border: 4px solid #8200d1;
+  border: 3px solid #f0f05a;
 }
 
 .secondary:focus {
