--- a/components/MoneyInput.module.css
+++ b/components/MoneyInput.module.css
@@ -1,57 +1,3 @@
-.container {
-}
-
-.container .error_border {
-  border-left: 4px solid #d00000;
-  padding-left: 10px;
-}
-
-.label {
-  color: #000b3b;
-  display: block;
-  margin-bottom: 8px;
-}
-
-.error_message {
-  display: block;
-  color: #d00000;
-  margin-bottom: 8px;
-}
-
-.input_container {
-  display: flex;
-  height: 40px;
-}
-
-.input_container .prefix {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  flex-direction: column;
-
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-  border-top: 1px solid #000b3b;
-  border-bottom: 1px solid #000b3b;
-  border-left: 1px solid #000b3b;
-
-  padding-left: 12px;
-  padding-right: 12px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  background-color: #f3f1f3;
-}
-
-.input_container .input {
-  border: 1px solid #000b3b;
-  padding-left: 5px;
-
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  outline: none;
-}
-
-.input_container .input:focus {
+.outline:focus {
   box-shadow: 0px 0px 0px 4px rgba(240, 240, 90, 1);
-  border: 2px solid #8200d1;
 }
